kubernetes_selenium/selenium-hub-deployement-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: selenium-ingress
  annotations:
    nginx.ingress.kubernetes.io: /$1
spec:
  rules:
    - host: my-selenium-grid.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: selenium-hub-deployment
                port:
                  number: 4444
